Fixed line spacing

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -48,6 +48,6 @@
   transition: clip-path 0.4s;
 }
 .perspective {
-  perspective: 1200px;
+  perspective: 700px;
   perspective-origin: left;
 }
